fixed the alignments

--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,7 @@ hr{
 
 .team-gallery img{
     border-radius: 7px;
+    object-fit: cover;
 }
 
 
